# len

./: .env  .envrc  .gitignore  .insta.yaml  Cargo.toml  README.md  design.md  flake.nix  justfile  shell.nix  toolchain.toml
.github/workflows/: doc.yaml  site.yaml
len/: Cargo.toml
len-cli/: Cargo.toml
len-cli/src/: main.rs
len-web/: .eslintrc.js  Cargo.toml  index.html  index.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
len-web/src/: index.js  lib.rs  style.css
len-web/static/: index.html
len/src/: eval.rs  lexer.rs  lib.rs  ty.rs
src/: ast.rs  complete.rs  eval.rs  lexer.rs  lib.rs  test.rs  ty.rs
src/snapshots/: len__ast__tests__app.snap  len__ast__tests__app_multiple.snap  len__ast__tests__assign.snap  len__ast__tests__assoc.snap  len__ast__tests__bad-grouping.snap  len__ast__tests__empty.snap  len__ast__tests__ident.snap  len__ast__tests__infix.snap  len__ast__tests__infix_grouping.snap  len__lexer__tests__ +2.snap  len__lexer__tests__bad s.snap  len__lexer__tests__empty.snap  len__lexer__tests__ident.snap  len__lexer__tests__lexer-2.snap  len__lexer__tests__lexer-4.snap  len__lexer__tests__lexer-5.snap  len__lexer__tests__lexer-7.snap  len__lexer__tests__lexer.snap  len__lexer__tests__reserved.snap  len__lexer__tests__symbol-2.snap  len__lexer__tests__symbol-5.snap  len__lexer__tests__symbol-7.snap  len__lexer__tests__symbols.snap  len__lexer__tests__unicode_ident-2.snap  len__lexer__tests__unicode_ident-3.snap  len__lexer__tests__unicode_ident-4.snap  len__lexer__tests__unicode_ident.snap  len__test__1 + (2 ^^ 3).snap  len__test__1 + 2.snap  len__test__lexer-2.snap  len__test__lexer.snap  len__test__map (x y) bar.snap  len__test__map foo bar.snap  len__test__parser.snap  len__test__parser.snap.new  len__test__unicode_ident-2.snap  len__test__unicode_ident-3.snap  len__test__unicode_ident-4.snap  (+1 more)
(+13 files in other folders)
